prototypes/graphs/src/HDILabels.scss
.HDILabels {
  display: flex;
  color: #232E3E;
  font-weight: 600;
  margin-top: 0.5em;
  align-items: center;
  &.inline {
    display: inline-flex;
  }
  .hdiValue {
    font-size: 0.75em;
    width: 11em;
    white-space: nowrap;

    position: relative;
    text-align: center;
    + .hdiValue {
      margin-left: 2px;
    }
    .background {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }
}

